fix: hide scrollbars in ff (#2446)

--- a/app/style/modal/group-creation.less
+++ b/app/style/modal/group-creation.less
@@ -86,6 +86,13 @@
 
   .group-creation-list-wrapper {
     height: 100%;
+    position: absolute;
+    left: 16px;
+    right: -16px;
+    padding-right: 16px;
+    user-list {
+      margin-left: -16px;
+    }
   }
 
   user-list {
